--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,14 @@
   });
 </script>
   <body>
-  
+    <ul class="messages">
+<% for(var i=0; i<messages.length; i++) {%>
+  <li class="message">
+    <span><%= messages[i].user %></span>
+    <span><%= messages[i].content %></span>
+  </li>
+<% } %>
+</ul>
     <ul id="messages"></ul>
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
